more 1.4+ changes